# lab

./: CMakeLists.txt  README.md  lab2.c
